client/css/home.css.less
.home {
  .container.page {
    margin-top: 2em;
    padding: 2em;
  }

  .jumbotron {
    padding-top: 0;
    padding-bottom: 1em;
    margin-bottom: 0;

    p {
      font-size: 19px;
      margin-bottom: 10px;
    }

    h1 {
      font-size: 3em;
    }

    .or-block {
      margin-top: 1em;
      text-align: center;

      .or {
        font-weight: 400;
        color: #888;
      }
    }
  }

  @media (max-width: 1200px) {
    .homepage-action, .homepage-description {
      text-align: center;
    }

    .homepage-action {
      padding-bottom: 1em;
    }
  }

  .curated-board {
    max-width: 310px;
    position: relative;
    margin: 0 auto 1em;
  }

  .curated-title {
    background: rgba(0,0,0,0.3);
    color: white;
    position: absolute;
    top: 0;
    left: 0;
    margin: 0;
    padding: 20px 10px;
    height: 100%;
    width: 100%;
    -webkit-transition: opacity 500ms;
    -moz-transition: opacity 500ms;
    -o-transition: opacity 500ms;
    transition: opacity 500ms;
  }

  .curated-board a:hover h2.curated-title {
    opacity: 0;
  }

  .curated-caption {
    background: rgba(40,96,144,0.5);
    color: white;
    text-align: left;
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    margin: 0;
    padding: 10px;
    opacity: 0;
    -webkit-transition: opacity 500ms;
    -moz-transition: opacity 500ms;
    -o-transition: opacity 500ms;
    transition: opacity 500ms;
  }

  .curated-caption span {
    display: inline-block;
  }

  .curated-board a:hover span.curated-caption {
    opacity: 1;
  }

}
.sign-in-or-anon {
  .modal-body {
    .col-sm-6 {
      padding: 0 3em;
      &:last-child {
        border-left: 1px solid lightgray;
      }
    }
  }
  .modal-footer {
    border-width: 0;
  }
}

